Bug 134285 - Error Adding gallery images to Impress Presentation
Summary: Error Adding gallery images to Impress Presentation
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
: 133891 134076 134396 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-24 18:07 UTC by Rafael Lima
Modified: 2020-06-30 08:43 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2020-06-24 18:07:17 UTC
I was testing LO Impress 7.0 Beta 2 and found a bug while adding gallery images into presentations. Below is a video I made showing the bug:

https://youtu.be/TH4ny5hzyi0

In summary, when I click, hold and drag the image into the presentation, it does not add the image I selected. Instead it adds the first image I had selected.

This problem does not occur in LO 6.4.4 (which I also have installed alongside the beta version)

Because of the bug, to successfully insert gallery images, I have to click and release, and then click again, hold and drag.

I am running LO 7 beta 2 on Ubuntu 20.04.
Comment 1 Telesto 2020-06-25 14:35:02 UTC
*** Bug 134076 has been marked as a duplicate of this bug. ***
Comment 2 Attila Baraksó (NISZ) 2020-06-25 19:20:58 UTC
Bibisected using bibisect-win64-7.0 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=23a1b7bad5147ee48d7f920085426d8846559af7
author: Caolán McNamara <caolanm@redhat.com>
committer: Caolán McNamara <caolanm@redhat.com>
summary: Resolves: tdf#132461 set color on mouse release, not press

Adding CC: Caolán McNamara
Comment 3 Caolán McNamara 2020-06-25 20:08:26 UTC
*** Bug 133891 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2020-06-26 08:58:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4ce2b2ad1e9132faa1bfc63a6a5b59b32c10234

tdf#134285 select the item before dragging it

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-06-26 08:58:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/8753cc269a350cc468e4f54f961f304a35144467

tdf#134285 select the item before dragging it

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2020-06-26 08:59:11 UTC
that seems to do the right thing now
Comment 7 Caolán McNamara 2020-06-29 18:13:49 UTC
*** Bug 134396 has been marked as a duplicate of this bug. ***
Comment 8 Xisco Faulí 2020-06-30 08:43:19 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 63f3485b57904de4e77c04f5759e6563fcce6748
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!