tdf#134285 select the item before dragging it

so we don't get the previously selected item

Change-Id: Ifd6e46d97f1de0de86403b9c237ee8d2cd3a6cd3